RESOLVED FIXED292635
[iOS] Quick Note context menu items are missing image
https://bugs.webkit.org/show_bug.cgi?id=292635
Summary [iOS] Quick Note context menu items are missing image
Lily Spiniolas
Reported 2025-05-06 15:43:58 PDT
Attachments
Lily Spiniolas
Comment 1 2025-05-06 16:19:14 PDT
EWS
Comment 2 2025-05-06 17:52:41 PDT
Committed 294586@main (a9f95ea3ac3a): <https://commits.webkit.org/294586@main> Reviewed commits have been landed. Closing PR #45031 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.