[iOS] Quick Note context menu items are missing image https://bugs.webkit.org/show_bug.cgi?id=292635 rdar://150801562

Reviewed by Wenson Hsieh and Megan Gardner.

Get the image using `_systemImageNamed` instead of
`systemImageNamed`.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView appHighlightMenu]):

Canonical link: https://commits.webkit.org/294586@main